Fix links alignment for research tools focus.

--- a/src/scss/components/_research-tools.scss
+++ b/src/scss/components/_research-tools.scss
@@ -68,6 +68,10 @@
     padding-right: 0;
   }
 
+  &--links {
+    right: $golden-ratio-5;
+  }
+
   .utk-collapse-research-tools {
     opacity: 1;
 
